# simple_serde

./: .gitignore  Cargo.toml  README.md
src/: array.rs  bin.rs  common.rs  json.rs  lib.rs  map.rs  primitives.rs  text.rs  toml.rs
src/text/: json.rs  mlist.rs  mod.rs  regex.rs  toml.rs
