[package]
name = "simple-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "0.5.9" , optional = true}
json = { version = "0.12.4" , optional = true}
#serde = "1.0.138"

[features]
bin = []

